--- a/01-RWD/Responsive Web Design Certification/projects/landing-page/landing.html
+++ b/01-RWD/Responsive Web Design Certification/projects/landing-page/landing.html
@@ -15,7 +15,7 @@
 <body>
   <header id="header">
     <div class="logo">
-      <img id="header-img" width="60px" height="60px" src="https://i.imgur.com/xx9VtyA.png" alt="lorem ipsum logo" />
+      <img id="header-img" width="60px" height="60px" src="https://i.ibb.co/zGvz4vG/g889.png" alt="lorem ipsum logo" />
     </div>
 
     <nav id="nav-bar">
@@ -72,7 +72,7 @@
         <h2>Sirloin drumstick</h2>
         <p>Ullamco leberkas turkey, id turducken biltong drumstick bresaola prosciutto.</p>
         <p>Drumstick bresaola beef ullamco cillum in spare ribs bacon eu. Sirloin drumstick nostrud, bacon ball tip ut aute ham hock.</p>
-        
+
       </div>
     </div>
   </section>
